*DAOMemory files updated